﻿# Version 2.0 - The Rewrite
- Rewrote entire bot
- Added moderation features (Enable/Disable for your guild, default: disabled)
- Added all new user commands (-help user)
- Removed -crack command
- Removed currency (Will be readded at a later date)
- Removed donate command (Will be introduced to the webpanel)
- Removed all old user commands

# Coming Soon
- Webpanel
- User profiles
- User preferences (Webpanel settings)
- Guild preferences (Webpanel settings)